@@ -1,6 +1,6 @@
-Date: 2022-11-27
+Date: 2022-12-01
 Package: CHNOSZ
-Version: 1.9.9-48
+Version: 1.9.9-49
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
